--- a/composer.json
+++ b/composer.json
@@ -9,13 +9,14 @@
         "guzzlehttp/guzzle": "^7.2",
         "larasocket/larasocket-driver": "^1.0",
         "laravel/framework": "^10.10",
-        "laravel/jetstream": "^4.2",
+        "laravel/jetstream": "^4.3",
         "laravel/sanctum": "^3.3",
         "laravel/tinker": "^2.8",
         "livewire/livewire": "^3.0"
     },
     "require-dev": {
         "fakerphp/faker": "^1.9.1",
+        "laravel/breeze": "^1.29",
         "laravel/pint": "^1.0",
         "laravel/sail": "^1.18",
         "mockery/mockery": "^1.4.4",
